force-app/main/default/objects/Qantas_URL_s__c/Qantas_URL_s__c.object-meta.xml
<CustomObject>
    <description>CRM-8428
Additional Requirements for Send Templated Uneditable Email from Case (Actions &amp; Recommendations)</description>
    <label>Qantas URL&apos;s</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Qantas URL&apos;s Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qantas URL&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>