force-app/main/default/objects/Qantas_URL_s__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add or amend a booking</fullName>
            </value>
            <value>
                <fullName>General Enquiry - Bookings</fullName>
            </value>
            <value>
                <fullName>General Enquiry – Airports</fullName>
            </value>
            <value>
                <fullName>General Enquiry – Baggage (Pre-Flight)</fullName>
            </value>
            <value>
                <fullName>General Enquiry – Bookings</fullName>
            </value>
            <value>
                <fullName>General Enquiry – Frequent Flyer/Qantas Club</fullName>
            </value>
            <value>
                <fullName>General Enquiry – Specific Needs Level 1</fullName>
            </value>
            <value>
                <fullName>General Enquiry – Travel documents</fullName>
            </value>
            <value>
                <fullName>Involuntary call guide</fullName>
            </value>
            <value>
                <fullName>Involuntary Changes</fullName>
            </value>
            <value>
                <fullName>New Booking International</fullName>
            </value>
            <value>
                <fullName>New Bookings Domestic</fullName>
            </value>
            <value>
                <fullName>New Bookings International</fullName>
            </value>
            <value>
                <fullName>Outbound Disrupt Callouts</fullName>
            </value>
            <value>
                <fullName>Payments and Fees</fullName>
            </value>
            <value>
                <fullName>Payments and Vouchers</fullName>
            </value>
            <value>
                <fullName>Specific Needs</fullName>
            </value>
            <value>
                <fullName>Voluntary Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>