force-app/main/default/objects/Qantas_URL_s__c/fields/Hyper_Link_Name__c.field-meta.xml
<CustomField>
    <fullName>Hyper_Link_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hyper Link Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>