force-app/main/default/objects/Qantas_URL_s__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>